--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 Click==7.0
 discord.py==1.1.1
 Flask==1.0.2
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
 idna==2.8
 idna-ssl==1.1.0
@@ -13,7 +14,9 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 multidict==4.5.2
+psycopg2-binary==2.8.2
 requests==2.21.0
+SQLAlchemy==1.3.3
 typing-extensions==3.7.2
 urllib3==1.24.3
 websockets==6.0
